--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,38 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://ca.indeed.com/job/assistant-project-manager-site-labour-4219c5504c8d2063'>Assistant to Project Manager-Site Labour - Niagara Falls, ON - Indeed.com</a></h5> 
+<h5><a href='https://jobs.jobvite.com/kaltire/job/oLBqbfwH'>Kal Tire Careers - Program Manager - Tire Lodge</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/zetaglobal/job/oafpbfwJ'>Zeta Global Careers - Project Manager - Analytics</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331274-business-analyst-it-project-manager'>Bey Business Analyst / IT Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698331113-senior-program-manager-square-ecommerce'>Square Senior Program Manager, Square eCommerce | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331177-bilingual-technical-project-manager-korean-speaking-is-mandatory'>Bey Bilingual Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/innovid/jobs/4497889002'>Job Application for Technical Project Manager at Innovid</a></h5> 
+<p><span class="badge badge-light">New York</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://relex.recruiterbox.com/jobs/fk03ilj/'>
+    Project Manager at RELEX
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://ca.indeed.com/job/assistant-project-manager-site-labour-4219c5504c8d2063'>Assistant to Project Manager-Site Labour - Niagara Falls, ON - Indeed.com</a></h5> 
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://abbvie.referrals.selectminds.com/jobs/senior-web-project-manager-12572'>Senior Web Project Manager - AbbVie Careers</a></h5> 
@@ -56,7 +86,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -84,7 +114,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -112,11 +142,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/program-manager-70063'>Program Manager - Medtronic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/program-manager-70063'>Program Manager - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/21758/jobs/construction-extraction/construction-project-manager-capex-coral-springs-fl-33075/83983'>
+<h5><a href='https://postings.com/21758/jobs/construction-extraction/construction-project-manager-capex-coral-springs-fl-33075/83983'>
 Construction Project Manager - CAPEX in Coral Springs, from Custom Executive Search, by John Barto
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -150,7 +180,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698315631-technical-project-manager-gsm-cdma-4g-5g-lte-mobile-projects-korean-speaking-is-mandatory'>Bey Technical Project Manager (GSM/CDMA/4G/5G LTE)?? Mobile Projects - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698315631-technical-project-manager-gsm-cdma-4g-5g-lte-mobile-projects-korean-speaking-is-mandatory'>Bey Technical Project Manager (GSM/CDMA/4G/5G LTE)?? Mobile Projects - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -174,7 +204,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/CBRElwMbPh'>Senior Project Manager - Commercial Construction - CBRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/CBRElwMbPh'>Senior Project Manager - Commercial Construction - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">Sunnyvale United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -226,7 +256,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
+<h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -288,7 +318,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584476'>Stellenangebot: Senior Project Manager (m/w/d) ? Event Marketing (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584476'>Stellenangebot: Senior Project Manager (m/w/d) ? Event Marketing (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -308,7 +338,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584433'>Stellenangebot: Project Manager (w/m/d) E-Commerce (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584433'>Stellenangebot: Project Manager (w/m/d) E-Commerce (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -328,7 +358,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brandloyalty.recruitee.com/o/programme-manager-7'>
+<h5><a href='https://brandloyalty.recruitee.com/o/programme-manager-7'>
       Programme Manager - BrandLoyalty
     </a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
@@ -362,11 +392,11 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Boston, Massachusetts  New York, New York  Providence, Rhode Island  Nashua, New Hampshire</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/barbaricum/13cd38d4-97e9-434c-994b-3ea6a1a39106'>Barbaricum - Mid-Level Technical Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/barbaricum/13cd38d4-97e9-434c-994b-3ea6a1a39106'>Barbaricum - Mid-Level Technical Project Manager</a></h5> 
 <p><span class="badge badge-light">Fairfax, VA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/barbaricum/4317f825-0ead-4ce6-85dd-1779b979c04e'>Barbaricum - Junior Technical Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/barbaricum/4317f825-0ead-4ce6-85dd-1779b979c04e'>Barbaricum - Junior Technical Project Manager</a></h5> 
 <p><span class="badge badge-light">Fairfax, VA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -413,7 +443,7 @@ years of experience in structural evaluation, forming and falsework analysis,?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/5nn8k3mzcfztodfcqf6mqr3xyh'>Product Manager / Project Manager | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/5nn8k3mzcfztodfcqf6mqr3xyh'>Product Manager / Project Manager | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Glendale, CA  Glendale, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -423,34 +453,6 @@ years of experience in structural evaluation, forming and falsework analysis,?..
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/LocusRobotics/743999698240216-deployment-project-manager-europe'>Locus Robotics Deployment Project Manager - Europe | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oyy0afw0&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nMiClMwi'>ServiceNow Careers - Customer Success Group Enablement (CSGE),  Events and Operations Program Manager</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  San Diego, California  Kirkland, Washington  Santa Clara, CASan Diego, CAKirkland, WA</span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/sdipresence/job/ooNpbfwv'>SDI Presence Careers - Junior Project Manager</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1932825'>Job Application for Project Manager at VaynerMedia LLC</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/I32egYSJZr/Junior-Project-Manager-Technical-Project-Analyst'>Junior Project Manager / Technical Project Analyst - Near Earth Autonomy - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4495457002'>Job Application for Program Manager/Ops Lead at XOR Security</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://flexsuisse.join.com/jobs/464406-legal-project-manager'>Job @ Flex Suisse (Z?rich): Legal / Project Manager | JOIN</a></h5> 
-<p><span class="badge badge-light">Z?rich, Switzerland</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPProfesionalServices/743999698147494-dod-program-project-manager-columbia-md-and-partial-remote'>CP Profesional Services DoD Program/Project Manager  -  Columbia MD and partial remote | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
